--- a/mystyle.css
+++ b/mystyle.css
@@ -70,6 +70,12 @@ body {
         display: block;
       }
     }
+		
+		<script>
+    $("button").on("click", function() {
+      alert("Clicked!");
+    });
+  </script>
 	
 	
 	
