--- a/mystyle.css
+++ b/mystyle.css
@@ -21,7 +21,7 @@ body {
 		
 		
 		
-		
+		 <link href="/normalize.css" rel="stylesheet">
 		 header {
       text-align: center;
       background: url('https://lh3.google.com/u/0/d/0B2QDUvVhUdZiYm1uTm40c3VGd0U=w1916-h962-iv1');
