--- a/mystyle.css
+++ b/mystyle.css
@@ -20,9 +20,10 @@ body {
 		color: white;
 		
 		
-		
+		<head>
 		 <link href="/normalize.css" rel="stylesheet">
-		 header {
+		 </style>
+		header {
       text-align: center;
       background: url('https://lh3.google.com/u/0/d/0B2QDUvVhUdZiYm1uTm40c3VGd0U=w1916-h962-iv1');
       background-size: cover;
@@ -77,6 +78,8 @@ body {
     });
   </script>
 	
+		</style>
+</head>
 	
 	
 	
