--- a/mystyle.css
+++ b/mystyle.css
@@ -24,7 +24,7 @@ body {
 		
 		
 		
-		 header {
+		 body {
       text-align: center;
       background: url('https://lh3.google.com/u/0/d/0B2QDUvVhUdZiYm1uTm40c3VGd0U=w1916-h962-iv1');
       background-size: cover;
