--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
 body {
 	 text-align: center;
-      background: url('https://lh3.google.com/u/0/d/0B2QDUvVhUdZiYm1uTm40c3VGd0U=w1916-h962-iv1');
+      background: rgb(204,234,231);
       background-size: cover;
       color: white;
     }
