--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
 body {
 	 text-align: center;
-      background-color: rgb(204,234,231);
+      background: rgb(204,234,231);
       background-size: cover;
       color: white;
     }
