--- a/mystyle.css
+++ b/mystyle.css
@@ -62,12 +62,10 @@ body {
 		
 		body{
 			background: rgb(204,234,231);
-		
+			text-color: black;
 		}
 		
-		p{
-		color: rgb (0,0,0);	
-		}
+		
 		
 		
 		
