--- a/mystyle.css
+++ b/mystyle.css
@@ -12,7 +12,7 @@ body {
     }
     img {
       margin: 40px 0px 0px 0px;
-      border: 7px black;
+      border: 7px solid white;
       border-radius: 20px;
     }
     ul {
