--- a/mystyle.css
+++ b/mystyle.css
@@ -33,7 +33,7 @@ body {
         font-size: 36px;
         padding: 5px;
       }
-      li {
+      #links{
         padding: 5px;
         display: block;
       }
