--- a/mystyle.css
+++ b/mystyle.css
@@ -15,7 +15,7 @@ body {
       border: 7px solid white;
       border-radius: 20px;
     }
-    ul {
+    #links {
       padding: 10px;
       background: rgba(0,0,0,0.5);
     }
