--- a/mystyle.css
+++ b/mystyle.css
@@ -15,11 +15,11 @@ body {
       border: 7px solid white;
       border-radius: 20px;
     }
-    #links {
+    li {
       padding: 10px;
       background: rgba(0,0,0,0.5);
     }
-    #links {
+    ul {
       display: inline;
       padding: 0px 10px 0px 10px;
     }
@@ -33,11 +33,11 @@ body {
         font-size: 36px;
         padding: 5px;
       }
-      #links {
+      li {
         padding: 5px;
         display: block;
       }
-    }
+   
 /body
 
 body{
