--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,5 @@
 body {
-	background: rgb(204,234,231);
+	background: white;
 	text-align: center;
       background-size: cover;
       color: black;
