--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,5 @@
 body {
-	background: <img src:"https://lh3.google.com/u/0/d/0B2QDUvVhUdZiVjF1cXd4dGk1WUU=w736-h555-iv1">;
+	background: rgb(204,234,231)>;
 	text-align: center;
       background-size: cover;
       color: black;
