--- a/mystyle.css
+++ b/mystyle.css
@@ -2,7 +2,7 @@ body {
 	background: rgb(204,234,231);
 	text-align: center;
       background-size: cover;
-      color: black;
+      color: rgb(0,150,136);
     }
     a {
       color: white;
