--- a/mystyle.css
+++ b/mystyle.css
@@ -60,7 +60,13 @@ body{
 		#hobbies{
 		color: black;
 		}
+	    #hobby{
+		color: black;
+	    }
 		#interest{
+		color: black;
+		}
+	    #interests{
 		color: black;
 		}
 		#contents{
@@ -70,6 +76,9 @@ body{
 		color: rgb(0,150,136);
 		}
 		#family{
+		color: black;
+		}
+	    #families{
 		color: black;
 		}
 	
